Fix navbar dropdowns getting hidden behind search bars
ref: https://github.com/Re-Volt-America/Website/issues/37

--- a/assets/css/car_cards_display.scss
+++ b/assets/css/car_cards_display.scss
@@ -29,5 +29,6 @@
     background: black;
     padding-top: 10px;
     padding-bottom: 10px;
+    z-index: 1;
   }
 }
